syntax = "proto3";

package api.helloworld.v1;
import "google/api/annotations.proto";
option go_package = "demosvc/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service Auth {
  rpc SignIn (CreateAuthRequest) returns (CreateAuthReply){
    option (google.api.http) = {
      get: "/helloworld/login"
    };
  };

  rpc AuthCallback (CreateAuthRequest) returns (CreateAuthReply){
    option (google.api.http) = {
      get: "/helloworld/callback"
    };
  };

  rpc SignOut (CreateAuthRequest) returns (CreateAuthReply);
  rpc UpdateAuth (UpdateAuthRequest) returns (UpdateAuthReply);
  rpc DeleteAuth (DeleteAuthRequest) returns (DeleteAuthReply);
  rpc GetAuth (GetAuthRequest) returns (GetAuthReply);
  rpc ListAuth (ListAuthRequest) returns (ListAuthReply);
}

message CreateAuthRequest {}
message CreateAuthReply {}

message UpdateAuthRequest {}
message UpdateAuthReply {}

message DeleteAuthRequest {}
message DeleteAuthReply {}

message GetAuthRequest {}
message GetAuthReply {}

message ListAuthRequest {}
message ListAuthReply {}